fix contrast issue in footer

--- a/src/style.css
+++ b/src/style.css
@@ -209,7 +209,7 @@
   --grey-200: #eeeeee; */
   --grey-300: #e0e0e0;
   --grey-400: #bdbdbd;
-  --grey-500: #9e9e9e;
+  /* --grey-500: #9e9e9e; */
   --grey-600: #757575;
   /* --grey-700: #616161; */
   --grey-800: #424242;
@@ -251,13 +251,16 @@ header {
   width: 100%;
 }
 
-#logo-container {
+#logo-container a {
   display: flex;
   align-items: center;
   position: absolute;
   left:2rem;
   top: 2rem;
+  text-decoration: none;
+  color: var(--grey-800)
 }
+
 #logo {
   width: 5rem;
 }
@@ -539,7 +542,7 @@ body > footer {
   align-items: center;
   justify-content: center;
   margin-top: auto;
-  color: var(--grey-500);
+  color: var(--grey-600);
 }
 
 body > footer > span {
